# Epico

./: .gitignore  README.md  setup.cfg
src/epico/: __init__.py  __main__.py  dir.py  file.py  thread.py
