[metadata]
name = epico
version = 0.1.3
author = Wyatt K
author_email = wyattk1093@gmail.com
description = Some epic utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wk1093/epico
project_urls =
	GitHub = https://github.com/wk1093/epico
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src